GNOME Bugzilla – Bug 764150
sharing: Fix "format not a string literal" error
Last modified: 2016-03-24 16:04:33 UTC
i18n will need to check whether that changes translations though.
Created attachment 324684 [details] [review] sharing: Fix "format not a string literal" error
After checking whether this made any of those strings fuzzy. Attachment 324684 [details] pushed as 70672c3 - sharing: Fix "format not a string literal" error